# judgecal

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: make_demo_svg.py
docs/spec/: implementation-contracts.md
examples/: batch_workflow.md  inspect_demo.py  make_synthetic_items.py  mock_batch_backend.py
experiments/quant_study/: README.md
src/judgecal/: __init__.py  _registry.py  cli.py  core.py  validate.py
src/judgecal/datasets/: __init__.py  base.py  judgebench.py  llmbar.py  mtbench_human.py  rewardbench2.py  rmbench.py
src/judgecal/executors/: __init__.py  base.py  claude_code.py  local.py  parsing.py  slurm.py
src/judgecal/fixtures/: __init__.py  mock_judge.py  packs.py  synthetic.py
src/judgecal/integrations/: __init__.py  inspect_ai.py
src/judgecal/manifests/: __init__.py  emit.py  sidecar.py
src/judgecal/probes/: __init__.py  base.py  padding.py  position.py  self_preference.py  stability.py  template.py  templates.py  verbosity.py
src/judgecal/report/: __init__.py  card.py  render.py  thresholds.py
src/judgecal/stats/: __init__.py  agreement.py  bootstrap.py  fdr.py  glm.py  intervals.py  mcnemar.py  power.py  types.py
tests/: test_cli.py  test_datasets.py  test_executors.py  test_inspect_integration.py  test_manifests.py  test_mock_judge.py  test_probes.py  test_report.py  test_stats.py  test_stats_crossval.py  test_synthetic.py  test_validation_recovery.py
